# backend/src/main/java/com/poeflipfinder/backend/presenter/CurrencyAmountViewModel.java
@@ -1,0 +1,4 @@
+package com.poeflipfinder.backend.presenter;
+
+public record CurrencyAmountViewModel(String currencyId, String name, String iconUrl, double quantity) {
+}
